# CoolToWarm

./: BuildDone.cmake.in  CMakeLists.txt  GridView.cpp  GridView.h  README.md  Thirdparty.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Filters/: CImg.h  ColorShiftFilter.cpp  ColorShiftFilter.h  Filter.h  ImageProcessor.cpp  ImageProcessor.h  oRGBFilter.cpp  oRGBFilter.h
